Added a site to the Dark Sites config

--- a/src/config/dark-sites.config
+++ b/src/config/dark-sites.config
@@ -267,6 +267,7 @@ discourse.disneyheroesgame.com
 discuss.noisebridge.info
 disneyplus.com
 distrotube.com
+djflame.tech
 dlive.tv
 dodi-repacks.site
 doesitarm.com
